# manim

./: Dockerfile  README.md  example_scenes.py  manim2.py  perf_scenes.py  setup.cfg  stage_scenes.py
from_3b1b/old/: 256.py  WindingNumber.py  WindingNumber_G.py  alt_calc.py  bell.py  borsuk.py  borsuk_addition.py  cba.py  complex_multiplication_article.py  counting_in_binary.py  crypto.py  dandelin.py  div_curl.py  domino_play.py  efvgt.py  fc1.py  for_flammy.py  fourier.py  fractal_charm.py  fractal_dimension.py  generate_logo.py  gradient.py  hanoi.py  highD.py  hyperdarts.py  inventing_math.py  inventing_math_images.py  leibniz.py  lost_lecture.py  matrix_as_transform_2d.py  moser_intro.py  moser_main.py  mug.py  music_and_measure.py  mvcr.py  number_line_scene.py  patreon.py  pi_day.py  putnam.py  qa_round_two.py  (+14 more)
from_3b1b/on_hold/: aliquot.py  holomorphic.py  moduli.py  shadows.py
logo/: logo.py
manim2/: __init__.py  config.py  constants.py  extract_scene.py  imports.py
manim2/animation/: animation.py  composition.py  creation.py  fading.py  growing.py  indication.py  movement.py  numbers.py  rotation.py  specialized.py  transform.py  update.py
manim2/camera/: camera.py  mapping_camera.py  moving_camera.py  multi_camera.py  three_d_camera.py
manim2/container/: container.py
manim2/for_3b1b_videos/: common_scenes.py  pi_class.py  pi_creature.py  pi_creature_animations.py  pi_creature_scene.py
manim2/for_tb_videos/: chat.py  image_objects.py  music_objects.py  omega_creature.py  svg_objects.py  tb_animations.py  tb_objects.py
manim2/mobject/: frame.py  (+16 more)
(+166 files in other folders)
