[metadata]
name = manim2
author = Tiger King
author-email= tigerking1218@gmail.com
summary = Animation engine for explanatory math videos
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/tigerking/manim2
project_urls =
    Bug Tracker = https://github.com/tigerking/manim2/issues
    Documentation = https://github.com/tigerking/manim2/
    Source Code = https://github.com/tigerking/manim2.git
license = MIT

[files]
packages = manim2

[entry_points]
console_scripts =
    manim2 = manim2:main
